--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,50 @@
 NEWS for package xlsx
 
+Changes in version 0.4.0 (released 2012-01-15)
+
+ o BACWARDS INCOMPATIBLE CHANGES!  A complete rewrite of functionality
+   to deal with cell styles.  Although I want to minimize API breaking
+   changes, I belive that these changes are for the better as the old
+   function createCellStyle had a whopping 11 arguments and was still
+   incomplete.  The new functionality defines an S3 object CellStyle
+   on which you can "add" DataFormat, Font, Fill, Border, Alignment,
+   Protection.  On the note of backward compatibility, I don't want to
+   promise anything as the package is still young.  As more people
+   starts using the package, the API will freeze and if breaking
+   changes are contemplated, a clear deprecation path will be
+   provided.  
+
+ o A Google project has been created http://code.google.com/p/rexcel/
+   to expose the development branch of the package and manage the
+   social interaction.  Please report all issues through this venue.
+   Also a Google groups http://groups.google.com/group/R-package-xlsx
+   has been created for announcements, etc.  Do register if you are
+   interested in the development of the package.  It may give me more
+   impetus to resolve an issue if I know many people are using this
+   package. 
+
+ o New function addHyperlink to add hyperlinks (urls, emails) to
+   a cell.
+
+ o New function addDataFrame to add a data.frame to an existing
+   sheet.  It alows the user to style the header, rownames, or
+   individual columns.  This is now used internally in the write.xlsx2
+   function. 
+
+ o New function getColumns to read a rectangular shape of cells into
+   an R data.frame.  This is now used internally in the read.xlsx2
+   function.  
+ 
+ o Rename the default in read.xlsx, createSheet and removeSheet to
+   sheetName="Sheet1" from "Sheet 1".  This makes it consistent with
+   Excel 2007 names of an empty workbook.
+
+ o Added ... arguments to read.xlsx2 function to mirror read.xlsx. 
+
+ o Thanks to Neal Richardson and James Ward for submitting some
+ code and suggestions. 
+
+
 Changes in version 0.3.0 (released 2011-03-03)
 
  o Effort has been made to make all functions of this package to be
